<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_quick_order"
        android:icon="@drawable/ic_add"
        android:title="@string/quick_order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_my_freights"
        android:title="@string/menu_my_freights"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reload"
        android:title="@string/menu_reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_browser"
        android:title="@string/menu_open_browser"
        app:showAsAction="never" />
</menu>
